// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SprintPlanningPage.test.js with sprints has the expected html structure 1`] = `
<section
  id="sprint-planning-page"
>
  <h1>
    Sprint planning
  </h1>
   
  <p>
    
            Planning sprint:  
    <br />
    
            Start: 2222-02-21 
    <br />
    
            End: 2222-02-23
        
  </p>
   
  <table
    class="table table-striped"
  >
    <thead>
      <tr>
        <th>
           
        </th>
         
        <th>
          Identifier
        </th>
         
        <th>
          Story
        </th>
         
        <th>
          Story points
        </th>
         
        <th>
          Operations
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr
        class="story-item"
      >
        <td>
          <span
            class="js-drag-drop"
          >
            <svg
              aria-label="Drag and drop to change order"
              class="fa-icon"
              height="16"
              role="img"
              version="1.1"
              viewBox="0 0 1792 1792"
              width="16"
            >
              <path
                d="M1792 896q0 26-19 45l-256 256q-19 19-45 19t-45-19-19-45v-128h-384v384h128q26 0 45 19t19 45-19 45l-256 256q-19 19-45 19t-45-19l-256-256q-19-19-19-45t19-45 45-19h128v-384h-384v128q0 26-19 45t-45 19-45-19l-256-256q-19-19-19-45t19-45l256-256q19-19 45-19t45 19 19 45v128h384v-384h-128q-26 0-45-19t-19-45 19-45l256-256q19-19 45-19t45 19l256 256q19 19 19 45t-19 45-45 19h-128v384h384v-128q0-26 19-45t45-19 45 19l256 256q19 19 19 45z"
              />
               
    
              <!---->
            </svg>
          </span>
        </td>
         
        <td>
          
            
        
        </td>
         
        <td>
          
            
        
        </td>
         
        <td>
          
            not estimated
        
        </td>
         
        <!---->
         
        <!---->
         
        <!---->
         
        <!---->
         
        <td>
          <button
            class="btn btn-danger btn-sm"
            title="Remove from sprint"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1408 1792"
              width="12.571428571428571"
            >
              <path
                d="M1408 736v192q0 40-28 68t-68 28h-1216q-40 0-68-28t-28-68v-192q0-40 28-68t68-28h1216q40 0 68 28t28 68z"
              />
               
    
              <!---->
            </svg>
          </button>
        </td>
      </tr>
      <tr
        class="story-item"
      >
        <td>
          <span
            class="js-drag-drop"
          >
            <svg
              aria-label="Drag and drop to change order"
              class="fa-icon"
              height="16"
              role="img"
              version="1.1"
              viewBox="0 0 1792 1792"
              width="16"
            >
              <path
                d="M1792 896q0 26-19 45l-256 256q-19 19-45 19t-45-19-19-45v-128h-384v384h128q26 0 45 19t19 45-19 45l-256 256q-19 19-45 19t-45-19l-256-256q-19-19-19-45t19-45 45-19h128v-384h-384v128q0 26-19 45t-45 19-45-19l-256-256q-19-19-19-45t19-45l256-256q19-19 45-19t45 19 19 45v128h384v-384h-128q-26 0-45-19t-19-45 19-45l256-256q19-19 45-19t45 19l256 256q19 19 19 45t-19 45-45 19h-128v384h384v-128q0-26 19-45t45-19 45 19l256 256q19 19 19 45z"
              />
               
    
              <!---->
            </svg>
          </span>
        </td>
         
        <td>
          
            
        
        </td>
         
        <td>
          
            
        
        </td>
         
        <td>
          
            not estimated
        
        </td>
         
        <!---->
         
        <!---->
         
        <!---->
         
        <!---->
         
        <td>
          <button
            class="btn btn-danger btn-sm"
            title="Remove from sprint"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1408 1792"
              width="12.571428571428571"
            >
              <path
                d="M1408 736v192q0 40-28 68t-68 28h-1216q-40 0-68-28t-28-68v-192q0-40 28-68t68-28h1216q40 0 68 28t28 68z"
              />
               
    
              <!---->
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
   
  <h2>
    Backlog
  </h2>
   
  <table
    class="table table-striped"
  >
    <thead>
      <tr>
        <th>
          Identifier
        </th>
         
        <th>
          Story
        </th>
         
        <th>
          Story points
        </th>
         
        <th>
          Operations
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr
        class="story-item"
      >
        <!---->
         
        <td>
          
            
        
        </td>
         
        <td>
          
            
        
        </td>
         
        <td>
          
            not estimated
        
        </td>
         
        <!---->
         
        <!---->
         
        <!---->
         
        <td>
          <button
            class="btn btn-primary btn-sm"
            title="Edit"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1536 1792"
              width="13.714285714285714"
            >
              <path
                d="M363 1536l91-91-235-235-91 91v107h128v128h107zM886 608q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zM832 416l416 416-832 832h-416v-416zM1515 512q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"
              />
               
    
              <!---->
            </svg>
          </button>
           
          <button
            class="btn btn-primary btn-sm"
            title="Add to sprint"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1408 1792"
              width="12.571428571428571"
            >
              <path
                d="M1408 736v192q0 40-28 68t-68 28h-416v416q0 40-28 68t-68 28h-192q-40 0-68-28t-28-68v-416h-416q-40 0-68-28t-28-68v-192q0-40 28-68t68-28h416v-416q0-40 28-68t68-28h192q40 0 68 28t28 68v416h416q40 0 68 28t28 68z"
              />
               
    
              <!---->
            </svg>
          </button>
        </td>
         
        <!---->
      </tr>
      <tr
        class="story-item"
      >
        <!---->
         
        <td>
          
            
        
        </td>
         
        <td>
          
            
        
        </td>
         
        <td>
          
            not estimated
        
        </td>
         
        <!---->
         
        <!---->
         
        <!---->
         
        <td>
          <button
            class="btn btn-primary btn-sm"
            title="Edit"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1536 1792"
              width="13.714285714285714"
            >
              <path
                d="M363 1536l91-91-235-235-91 91v107h128v128h107zM886 608q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zM832 416l416 416-832 832h-416v-416zM1515 512q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"
              />
               
    
              <!---->
            </svg>
          </button>
           
          <button
            class="btn btn-primary btn-sm"
            title="Add to sprint"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1408 1792"
              width="12.571428571428571"
            >
              <path
                d="M1408 736v192q0 40-28 68t-68 28h-416v416q0 40-28 68t-68 28h-192q-40 0-68-28t-28-68v-416h-416q-40 0-68-28t-28-68v-192q0-40 28-68t68-28h416v-416q0-40 28-68t68-28h192q40 0 68 28t28 68v416h416q40 0 68 28t28 68z"
              />
               
    
              <!---->
            </svg>
          </button>
        </td>
         
        <!---->
      </tr>
      <tr
        class="story-item"
      >
        <!---->
         
        <td>
          
            
        
        </td>
         
        <td>
          
            
        
        </td>
         
        <td>
          
            not estimated
        
        </td>
         
        <!---->
         
        <!---->
         
        <!---->
         
        <td>
          <button
            class="btn btn-primary btn-sm"
            title="Edit"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1536 1792"
              width="13.714285714285714"
            >
              <path
                d="M363 1536l91-91-235-235-91 91v107h128v128h107zM886 608q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zM832 416l416 416-832 832h-416v-416zM1515 512q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"
              />
               
    
              <!---->
            </svg>
          </button>
           
          <button
            class="btn btn-primary btn-sm"
            title="Add to sprint"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1408 1792"
              width="12.571428571428571"
            >
              <path
                d="M1408 736v192q0 40-28 68t-68 28h-416v416q0 40-28 68t-68 28h-192q-40 0-68-28t-28-68v-416h-416q-40 0-68-28t-28-68v-192q0-40 28-68t68-28h416v-416q0-40 28-68t68-28h192q40 0 68 28t28 68v416h416q40 0 68 28t28 68z"
              />
               
    
              <!---->
            </svg>
          </button>
        </td>
         
        <!---->
      </tr>
    </tbody>
  </table>
   
  <button
    class="btn btn-primary"
    type="button"
  >
    Add story
  </button>
</section>
`;

exports[`SprintPlanningPage.test.js without sprints has the expected html structure 1`] = `
<section
  id="sprint-planning-page"
>
  <h1>
    Sprint planning
  </h1>
   
  <p>
    No sprint to plan!
  </p>
   
  <h2>
    Backlog
  </h2>
   
  <table
    class="table table-striped"
  >
    <thead>
      <tr>
        <th>
          Identifier
        </th>
         
        <th>
          Story
        </th>
         
        <th>
          Story points
        </th>
         
        <th>
          Operations
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr
        class="story-item"
      >
        <!---->
         
        <td>
          
            
        
        </td>
         
        <td>
          
            
        
        </td>
         
        <td>
          
            not estimated
        
        </td>
         
        <!---->
         
        <!---->
         
        <!---->
         
        <td>
          <button
            class="btn btn-primary btn-sm"
            title="Edit"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1536 1792"
              width="13.714285714285714"
            >
              <path
                d="M363 1536l91-91-235-235-91 91v107h128v128h107zM886 608q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zM832 416l416 416-832 832h-416v-416zM1515 512q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"
              />
               
    
              <!---->
            </svg>
          </button>
           
          <button
            class="btn btn-primary btn-sm"
            title="Add to sprint"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1408 1792"
              width="12.571428571428571"
            >
              <path
                d="M1408 736v192q0 40-28 68t-68 28h-416v416q0 40-28 68t-68 28h-192q-40 0-68-28t-28-68v-416h-416q-40 0-68-28t-28-68v-192q0-40 28-68t68-28h416v-416q0-40 28-68t68-28h192q40 0 68 28t28 68v416h416q40 0 68 28t28 68z"
              />
               
    
              <!---->
            </svg>
          </button>
        </td>
         
        <!---->
      </tr>
      <tr
        class="story-item"
      >
        <!---->
         
        <td>
          
            
        
        </td>
         
        <td>
          
            
        
        </td>
         
        <td>
          
            not estimated
        
        </td>
         
        <!---->
         
        <!---->
         
        <!---->
         
        <td>
          <button
            class="btn btn-primary btn-sm"
            title="Edit"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1536 1792"
              width="13.714285714285714"
            >
              <path
                d="M363 1536l91-91-235-235-91 91v107h128v128h107zM886 608q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zM832 416l416 416-832 832h-416v-416zM1515 512q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"
              />
               
    
              <!---->
            </svg>
          </button>
           
          <button
            class="btn btn-primary btn-sm"
            title="Add to sprint"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1408 1792"
              width="12.571428571428571"
            >
              <path
                d="M1408 736v192q0 40-28 68t-68 28h-416v416q0 40-28 68t-68 28h-192q-40 0-68-28t-28-68v-416h-416q-40 0-68-28t-28-68v-192q0-40 28-68t68-28h416v-416q0-40 28-68t68-28h192q40 0 68 28t28 68v416h416q40 0 68 28t28 68z"
              />
               
    
              <!---->
            </svg>
          </button>
        </td>
         
        <!---->
      </tr>
      <tr
        class="story-item"
      >
        <!---->
         
        <td>
          
            
        
        </td>
         
        <td>
          
            
        
        </td>
         
        <td>
          
            not estimated
        
        </td>
         
        <!---->
         
        <!---->
         
        <!---->
         
        <td>
          <button
            class="btn btn-primary btn-sm"
            title="Edit"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1536 1792"
              width="13.714285714285714"
            >
              <path
                d="M363 1536l91-91-235-235-91 91v107h128v128h107zM886 608q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zM832 416l416 416-832 832h-416v-416zM1515 512q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"
              />
               
    
              <!---->
            </svg>
          </button>
           
          <button
            class="btn btn-primary btn-sm"
            title="Add to sprint"
            type="button"
          >
            <svg
              class="fa-icon"
              height="16"
              role="presentation"
              version="1.1"
              viewBox="0 0 1408 1792"
              width="12.571428571428571"
            >
              <path
                d="M1408 736v192q0 40-28 68t-68 28h-416v416q0 40-28 68t-68 28h-192q-40 0-68-28t-28-68v-416h-416q-40 0-68-28t-28-68v-192q0-40 28-68t68-28h416v-416q0-40 28-68t68-28h192q40 0 68 28t28 68v416h416q40 0 68 28t28 68z"
              />
               
    
              <!---->
            </svg>
          </button>
        </td>
         
        <!---->
      </tr>
    </tbody>
  </table>
   
  <button
    class="btn btn-primary"
    type="button"
  >
    Add story
  </button>
</section>
`;
